<resources>
    <string name="app_name">Dagger2 example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_to_know">First to know</string>
    <string name="all_news">All news in one place, be the first to know last news</string>
    <string name="next">Next</string>
    <string name="str">Nuntium</string>
    <string name="sports">🏈 Sports</string>
    <string name="select_your_favorite_topics">Select your favorite topics</string>
    <string name="select_some">Select some of your favorite topics to let us suggest better news for you.</string>
    <string name="get_started">Get started</string>
</resources>